--- a/style.css
+++ b/style.css
@@ -226,3 +226,377 @@ p{
 #msgForm input:focus, #msgForm button:focus {
   box-shadow: none;
 }
+/*for new chat window*/
+
+
+
+.main-card {
+  background:white;
+  color:white;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+ overflow: scroll;
+  display:flex;
+  flex-direction:column;
+  overflow: hidden;
+}
+
+.main-title {
+  background-color: rebeccapurple;
+  font-size: large;
+  font-weight: bold;
+  padding:32px;
+}
+.main-title svg{
+  height: 16px;
+   margin: 0px 8px
+}
+
+.chat-area {
+  flex-grow: 1;
+  overflow: auto;
+  border-radius: 8px;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+}
+.input-message {
+  padding: 2px 10px;
+  flex-grow: 1;
+  margin: 0px 8px 0px 0px;
+  border-radius: 24px;
+  border: none;
+  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.input-message:focus{
+  outline :none;
+  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
+}
+.input-div {
+  height: 30px;
+  width: calc(100% - 32px);
+  margin: 16px;
+  display: flex;
+}
+
+.input-send {
+  background :rebeccapurple;
+  width: 48px;
+  height: 48px;
+  border-radius: 24px;
+  border: none;
+  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.input-send:hover{
+  cursor:pointer;  
+  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
+}
+.input-send svg{
+  fill:white;
+  margin:11px 8px;
+}
+.chat-message-div {
+  display: flex;
+}
+
+.chat-message {
+  background-color: white;
+  margin: 4px 8px;
+  padding: 5px 10px;
+  animation-name: fadeIn;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: 100ms;
+  box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.11);
+  color:black;
+  border-radius: 50px;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+/*latest chat*/
+strong {
+  font-weight: bold;
+}
+/*
+.ChatWindow {
+  width: 48rem;
+  height: 75vh;
+  padding: 2.5rem;
+  padding-bottom: 6.5rem;
+  overflow: hidden;
+  overflow-y: auto;
+  align-self: flex-end;
+  background: #eee;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
+  border-radius: 3px 3px 0 0;
+}
+*/
+.ChatItem {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  margin-bottom: 0.8rem;
+}
+
+.ChatItem--expert {
+  flex-direction: row-reverse;
+}
+
+.ChatItem-meta {
+  display: flex;
+  align-items: center;
+  flex: 0 1 auto;
+  margin-right: 1rem;
+  margin-bottom: 0.5rem;
+  width: 2.5rem;
+}
+.ChatItem--expert .ChatItem-meta {
+  margin-right: 0;
+  margin-left: 1rem;
+}
+
+.ChatItem-chatContent {
+  position: relative;
+  flex: 1 0 auto;
+  width: 100%;
+}
+
+.ChatItem-avatar {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+.ChatItem--expert .ChatItem-avatar {
+  margin-right: 0;
+}
+
+.ChatItem-avatarImage {
+  max-width: 100%;
+  border-radius: 100em;
+}
+
+.ChatItem-avatarInitials {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2.5rem;
+  height: 2.5rem;
+  background: #ccc;
+  color: #444;
+  border-radius: 100em;
+}
+
+.ChatItem-timeStamp {
+  width: 70%;
+  font-size: 0.875rem;
+  color: #666;
+}
+.ChatItem--expert .ChatItem-timeStamp {
+  margin-left: auto;
+}
+
+.ChatItem-chatText {
+  position: relative;
+  width: 70%;
+  margin-bottom: 0.5rem;
+  padding: 1rem;
+  background: #007FEF;
+  color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.175);
+  line-height: 1.3;
+}
+.ChatItem-chatText:first-child::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -0.4rem;
+  width: 1rem;
+  height: 1rem;
+  transform: scaleX(0.8) skew(45deg);
+  background: #007FEF;
+}
+.ChatItem--expert .ChatItem-chatText:first-child::before {
+  right: -0.4rem;
+  left: auto;
+  transform: skew(-40deg);
+  background: #fff;
+  background: #fff;
+  box-shadow: 4px 0 4px -1px rgba(0, 0, 0, 0.1);
+}
+.ChatItem--expert .ChatItem-chatText {
+  margin-left: auto;
+  border: 1px solid #dbdbdb;
+  background: white;
+  color: #666;
+}
+
+.ChatItem-chatText > div {
+  display: inline;
+}
+
+.ChatInput {
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  z-index: 10;
+  width: 48rem;
+  height: 5rem;
+  transform: translateX(-50%);
+  background: #eee;
+}
+
+.ChatInput-input {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5rem;
+  padding: 1rem 1.5rem;
+  padding-right: 5.25rem;
+  border: 0;
+  border-top: 1px solid #ccc;
+  overflow: hidden;
+  overflow-y: scroll;
+  background: #fff;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+  font-size: 1rem;
+  resize: none;
+}
+
+[contenteditable]:empty:before {
+  content: attr(placeholder);
+  display: block;
+  color: #999;
+}
+
+[contenteditable]:active,
+[contenteditable]:focus {
+  border: 0;
+  border-top: 1px solid #ccc;
+  outline: 0;
+  box-shadow: inherit;
+}
+
+.ChatInput-btnSend {
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 1.5rem;
+  transform: translateY(-50%);
+  border: none;
+  border-radius: 3px;
+  background: #007FEF;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  color: white;
+  cursor: pointer;
+}
+
+
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/raleway/v19/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVvaorCIPrQ.ttf) format('truetype');
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+
+.container {
+  display: flex;
+  -webkit-display: box;
+  -moz-display: box;
+  -ms-display: flexbox;
+  -webkit-display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+}
+.cards {
+  display: flex;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  width: 100%;
+}
+@media (min-width: 40rem) {
+  .cards {
+    width: 50%;
+  }
+}
+@media (min-width: 56rem) {
+  .cards {
+    width: 25%;
+  }
+}
+.cards .card-item {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  width: 100%;
+  border-radius: 6px;
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+  transition: transform 0.5s;
+  -webkit-transition: transform 0.5s;
+}
+.cards .card-item:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+}
+.cards .card-item:hover .card-image {
+  opacity: 1;
+}
+.cards .card-info {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  padding: 1rem;
+  line-height: 1.5em;
+}
+.cards .card-title {
+  font-size: 25px;
+  line-height: 1.1em;
+  color: #32325d;
+  margin-bottom: 0.2em;
+}
+.cards .card-image {
+  height: 200px;
+  overflow: hidden;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 6px 6px 0px 0px;
+  opacity: 0.91;
+}
